# ferrous

./: .clippy.toml  .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  .tool-versions  CHANGELOG.md  CI-LOCAL-PARITY.md  CLAUDE.md  CONTRIBUTING.md  CONTRIBUTORS.md  Cargo.toml  Dockerfile  Makefile  PLAN.md  README.md  clippy.toml  docker-compose.monitoring.yml  docker-compose.override.yml  docker-compose.prod.yml  docker-compose.yml  rustfmt.toml
.cargo/: config.toml
.githooks/: pre-commit
.github/: dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  documentation.md  feature_request.md  question.md
.github/workflows/: ci.yml  dependabot-auto-merge.yml  pr-checks.yml  welcome.yml
convex/: items.js  schema.ts
docs/: README.md  api-reference.md  api-versioning.md  architecture-evaluation.md  authentication.md  deployment-guide.md  getting-started.md  secrets-management.md  test-evaluation-summary.md  test-evaluation.md  test-improvements.md  test-reorganization-summary.md
docs/database/: README.md  convex.md  in-memory.md
k8s/: deployment.yaml  monitoring.yaml
monitoring/: prometheus.yml
nginx/: nginx.conf
scripts/: setup-dev.sh
src/: auth.rs  config.rs  db.rs  error.rs  handlers.rs  lib.rs  main.rs  metrics.rs  middleware.rs  models.rs  openapi.rs  rate_limit.rs  request_id.rs  routes.rs  security.rs  state.rs  validation.rs  version.rs
tests/: api_tests.rs  common.rs  config_tests.rs  health_tests.rs  metrics_tests.rs  operational_tests.rs  phase_3_operations.rs  phase_4_developer_experience.rs  version_tests.rs
(+31 files in other folders)
