[package]
name = "ferrous"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.47", features = ["full"] }
axum = "0.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tower = { version = "0.5", features = ["limit", "load-shed", "timeout"] }
tower-http = { version = "0.6", features = ["trace", "cors", "timeout", "limit"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.17", features = ["v4", "serde"] }
dotenvy = "0.15"
async-trait = "0.1"
thiserror = "1.0"
convex = "0.9"
validator = { version = "0.20", features = ["derive"] }
jsonwebtoken = "9.3"
reqwest = { version = "0.12", features = ["json"] }
base64 = "0.22"
sysinfo = "0.36"
num_cpus = "1.16"
utoipa = { version = "5", features = ["axum_extras", "chrono", "uuid"] }
prometheus = "0.14"
once_cell = "1.20"
